--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.animation {
+  animation: slideIn 500ms ease;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(100%);
+  }
+  15% {
+    transform: translateX(75%);
+  }
+  30% {
+    transform: translateX(50%);
+  }
+  45% {
+    transform: translateX(35%);
+  }
+  60% {
+    transform: translateX(20%);
+  }
+  75% {
+    transform: translateX(10%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
